add usage based dashboard endpoints, updated tests and documentation for the endpoints
